fix: gap and align of material labels

--- a/src/assets/scss/components/legend.scss
+++ b/src/assets/scss/components/legend.scss
@@ -12,8 +12,6 @@
 .mat-chip {
     display: inline-block;
     padding: 0.1rem 0.4rem 0;
-    margin-right: 0.25rem;
-    margin-bottom: 0.5rem;
     cursor: default;
 }
 
@@ -21,7 +19,6 @@
     display: inline;
     padding: 0 0.4rem;
     font-size: 0.75rem;
-    margin-right: 0.1rem;
 }
 
 .mat-main {
